--- a/style/style.css
+++ b/style/style.css
@@ -450,6 +450,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   max-width: 256px;
+  min-height: 256px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -462,11 +463,11 @@ body {
 .third .item-ava {
   position: relative;
   margin-bottom: 36px;
-  width: 100%;
 }
 
 .third .item-ava .ava {
-  width: 100%;
+  width: 256px;
+  height: 256px;
 }
 
 .third .item-ava .star {
