--- a/style/style.scss
+++ b/style/style.scss
@@ -344,15 +344,18 @@ body {
   .third-item {
     display: flex;
     max-width: 256px;
+    min-height: 256px;
     flex-direction: column;
     align-items: center;
   }
   .item-ava {
     position: relative;
     margin-bottom: 36px;
-    width: 100%;
+   
     .ava {
-      width: 100%;
+      // width: 100%;
+      width: 256px;
+      height: 256px;
     }
     .star {
       position: absolute;
