--- a/style/media.css
+++ b/style/media.css
@@ -82,7 +82,8 @@
   .third .third-item .item-ava {
     margin-right: 10px;
   }
-  .third .third-item .item-name {
+  .third .third-item .item-name,
+  .third .third-item .item-link {
     text-align: left;
   }
   .arrows {
@@ -98,6 +99,9 @@
     font-weight: 600;
     font-size: 25px;
     line-height: 30px;
+  }
+  .container {
+    padding: 0 20px;
   }
   .second .item-number {
     max-width: 70px;
@@ -178,6 +182,56 @@
   }
   .modal-section {
     max-width: 90%;
+  }
+  .header .header-date {
+    font-size: 24px;
+    line-height: 24px;
+  }
+  .header .header-title {
+    font-size: 46px;
+    line-height: 60px;
+    margin-bottom: 60px;
+  }
+  .header .header-dj {
+    width: 100%;
+    margin-top: 30px;
+  }
+  .second .second-list {
+    margin-top: 60px;
+  }
+  .second .second-item .item-num {
+    font-size: 51px;
+    line-height: 61px;
+  }
+  .second .item-content .title {
+    font-size: 25px;
+    line-height: 30px;
+    margin-bottom: 30px;
+  }
+  .second .item-content .content {
+    font-size: 18px;
+    line-height: 22px;
+  }
+  .second .content-list .content-item {
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 10px;
+    padding-left: 36px;
+  }
+  .third .item-ava {
+    margin-bottom: 0;
+  }
+  .third .item-ava .ava {
+    width: 160px;
+    height: 160px;
+  }
+  .third .item-ava .star {
+    top: -30px;
+    left: -30px;
+  }
+  .third .item-name {
+    font-size: 25px;
+    line-height: 25px;
   }
 }
 
