--- a/style/style.css
+++ b/style/style.css
@@ -450,7 +450,6 @@ body {
   display: -ms-flexbox;
   display: flex;
   max-width: 256px;
-  min-height: 256px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -489,6 +488,7 @@ body {
   font-size: 20px;
   line-height: 24px;
   text-align: center;
+  display: block;
   color: #ff7323;
 }
 
