--- a/style/style.scss
+++ b/style/style.scss
@@ -344,7 +344,6 @@ body {
   .third-item {
     display: flex;
     max-width: 256px;
-    min-height: 256px;
     flex-direction: column;
     align-items: center;
   }
@@ -374,7 +373,7 @@ body {
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
-    text-align: center;
+    text-align: center;display: block;
     color: #ff7323;
   }
 }
