--- a/style/style.scss
+++ b/style/style.scss
@@ -94,9 +94,24 @@ body {
   &::before {
     opacity: 1;
   }
-  .modal-section {
+  .modal-center {
     transform: scale(1);
   }
+  .transitOff{
+    transform: scale(0);
+    display: none;
+  }
+  .transitOn{
+    display: block;
+    transform: scale(1);
+  }
+}
+
+.modal-section-thank{
+  display: none;
+}
+.modal-section-thank-active{
+  display: block;
 }
 .modal-section {
   transform: scale(0);
@@ -111,8 +126,6 @@ body {
   z-index: 100;
   overflow: auto;
   // min-height: 740px;
-
-  
   .close {
     cursor: pointer;
     position: absolute;
@@ -141,8 +154,29 @@ body {
   .close:after {
     transform: rotate(-45deg);
   }
+  .form-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: white;
+    .heart {
+      margin-bottom: 10px;
+    }
+    .modal-thanks {
+      font-weight: 600;
+      font-size: 35px;
+      line-height: 42px;
+    }
+    .modal-sucsess {
+      font-weight: 300;
+      font-size: 20px;
+      line-height: 24px;
+      margin-top: 30px;
+    }
+  }
 }
-.btn-wrapper{
+.btn-wrapper {
   width: 100%;
 }
 .modal-helper {
@@ -225,7 +259,7 @@ body {
     background: white;
     margin: 0 37px;
   }
-  .star-nav{
+  .star-nav {
     position: absolute;
     right: 0;
     top: 0;
@@ -247,7 +281,7 @@ body {
       font-weight: 300;
       color: #767676;
     }
-   
+
     margin-bottom: 14px;
   }
   .header-title {
@@ -257,18 +291,17 @@ body {
     margin-bottom: 90px;
   }
 }
-.btn-header{
+.btn-header {
   position: relative;
-  &::before{
+  &::before {
     position: absolute;
-    content:'';
+    content: "";
     height: 1px;
     width: 50vw;
     right: 0;
     top: 50%;
     z-index: -1;
-    background:white;
-    
+    background: white;
   }
 }
 .arrows {
@@ -350,7 +383,7 @@ body {
   .item-ava {
     position: relative;
     margin-bottom: 36px;
-   
+
     .ava {
       // width: 100%;
       width: 256px;
@@ -373,14 +406,15 @@ body {
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
-    text-align: center;display: block;
+    text-align: center;
+    display: block;
     color: #ff7323;
   }
 }
 .footer {
   padding: 160px 0 59px;
   position: relative;
-  .footer-arrow{
+  .footer-arrow {
     position: relative;
   }
   .footer-bg {
