--- a/style/style.css
+++ b/style/style.css
@@ -77,6 +77,10 @@ body {
   }
 }
 
+#myModalFinish {
+  z-index: 1000;
+}
+
 /* The Modal (background) */
 .modal {
   -webkit-transition: visibility 0.8s ease 0s;
@@ -155,10 +159,6 @@ body {
   display: block;
   -webkit-transform: scale(1);
           transform: scale(1);
-}
-
-.modal-section-thank {
-  display: none;
 }
 
 .modal-section-thank-active {
@@ -246,6 +246,12 @@ body {
   font-size: 20px;
   line-height: 24px;
   margin-top: 30px;
+}
+
+.modal-section.modal-section-thank {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  z-index: 1000;
 }
 
 .btn-wrapper {
