--- a/style/style.scss
+++ b/style/style.scss
@@ -54,7 +54,9 @@ body {
     transform: rotate(360deg);
   }
 }
-
+#myModalFinish{
+  z-index: 1000;
+}
 /* The Modal (background) */
 .modal {
   transition: visibility 0.8s ease 0s;
@@ -107,9 +109,7 @@ body {
   }
 }
 
-.modal-section-thank{
-  display: none;
-}
+
 .modal-section-thank-active{
   display: block;
 }
@@ -174,6 +174,10 @@ body {
       line-height: 24px;
       margin-top: 30px;
     }
+  }
+  &.modal-section-thank{
+    transform: scale(1);
+    z-index: 1000;
   }
 }
 .btn-wrapper {
