--- a/style/media.scss
+++ b/style/media.scss
@@ -209,6 +209,10 @@
     }
   }
   .third {
+    .third-list{
+      margin-top: 50px;
+      padding: 0 20px;
+    }
     .item-ava {
       margin-bottom: 0;
       .ava {
@@ -216,8 +220,9 @@
         height: 160px;
       }
       .star {
-        top: -30px;
-        left: -30px;
+        width: 60px;
+        top: 0px;
+        left: -15px;
       }
     }
     .item-name {
