--- a/style/style.scss
+++ b/style/style.scss
@@ -348,6 +348,7 @@ body {
 .second {
   color: white;
   padding-top: 100px;
+  position: relative;
   .second-wrapper {
     position: relative;
     .second-arrows {
