--- a/style/media.css
+++ b/style/media.css
@@ -59,9 +59,37 @@
   .footer .social-wrapper {
     max-width: 45%;
   }
+  .second .orangestar {
+    position: absolute;
+    right: 0;
+    bottom: 280px;
+  }
 }
 
 @media screen and (max-width: 900px) {
+  .header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .second .second-title {
+    position: relative;
+  }
+  .second .second-title .second-heart {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 76px;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
   .third .third-list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -170,6 +198,10 @@
 }
 
 @media screen and (max-width: 480px) {
+  .nav .line {
+    height: 20px;
+    margin: 0 15px;
+  }
   .modal-section .modal-helper {
     font-size: 14px;
     line-height: 18px;
@@ -193,8 +225,14 @@
     margin-bottom: 60px;
   }
   .header .header-dj {
-    width: 100%;
-    margin-top: 30px;
+    width: 90%;
+    margin-top: 50px;
+  }
+  .header .btn-header::before {
+    display: none;
+  }
+  .second {
+    padding-top: 0;
   }
   .second .second-list {
     margin-top: 60px;
@@ -240,12 +278,34 @@
   }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 380px) {
   .modal-section {
     max-height: 100vh;
   }
   .modal-section .modal-form input {
     margin-bottom: 5px;
+  }
+  .header .header-date {
+    font-size: 22px;
+    line-height: 22px;
+  }
+  .header .header-title {
+    font-size: 43px;
+    line-height: 50px;
+    margin-bottom: 33px;
+  }
+  .third .item-name {
+    font-size: 20px;
+    line-height: 23px;
+  }
+  .third .item-ava .ava {
+    width: 115px;
+    height: 115px;
+  }
+  .third .item-ava .star {
+    width: 41px;
+    top: 5px;
+    left: -5px;
   }
 }
 /*# sourceMappingURL=media.css.map */
