--- a/style/media.scss
+++ b/style/media.scss
@@ -60,8 +60,32 @@
       max-width: 45%;
     }
   }
+  .second{
+    .orangestar{
+      position: absolute;
+      right: 0;
+      bottom: 280px;
+    }
+  }
 }
 @media screen and (max-width: 900px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .second {
+    .second-title {
+      position: relative;
+      .second-heart {
+        position: absolute;
+        right: 0;
+        top: 50%;
+        width: 76px;
+        transform: translateY(-50%);
+      }
+    }
+  }
   .third {
     .third-list {
       flex-direction: column;
@@ -153,6 +177,10 @@
 }
 
 @media screen and (max-width: 480px) {
+  .nav .line {
+    height: 20px;
+    margin: 0 15px;
+  }
   .modal-section .modal-helper {
     font-size: 14px;
     line-height: 18px;
@@ -178,11 +206,16 @@
       margin-bottom: 60px;
     }
     .header-dj {
-      width: 100%;
-      margin-top: 30px;
+      width: 90%;
+      margin-top: 50px;
+    }
+    .btn-header::before {
+      display: none;
     }
   }
   .second {
+    padding-top: 0;
+
     .second-list {
       margin-top: 60px;
     }
@@ -201,7 +234,7 @@
         line-height: 22px;
       }
     }
-     .content-list .content-item {
+    .content-list .content-item {
       font-size: 16px;
       line-height: 19px;
       margin-bottom: 10px;
@@ -209,7 +242,7 @@
     }
   }
   .third {
-    .third-list{
+    .third-list {
       margin-top: 50px;
       padding: 0 20px;
     }
@@ -232,11 +265,39 @@
   }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 380px) {
   .modal-section {
     max-height: 100vh;
     .modal-form input {
       margin-bottom: 5px;
+    }
+  }
+  .header {
+    .header-date {
+      font-size: 22px;
+      line-height: 22px;
+    }
+    .header-title {
+      font-size: 43px;
+      line-height: 50px;
+      margin-bottom: 33px;
+    }
+  }
+  .third {
+    .item-name {
+      font-size: 20px;
+      line-height: 23px;
+    }
+    .item-ava {
+      .ava {
+        width: 115px;
+        height: 115px;
+      }
+      .star {
+        width: 41px;
+        top: 5px;
+        left: -5px;
+      }
     }
   }
 }
