--- a/style/style.scss
+++ b/style/style.scss
@@ -454,6 +454,14 @@ body {
     text-align: center;
     margin-bottom: 11px;
   }
+  .item-work{
+    font-weight: 300;
+font-size: 20px;
+line-height: 24px;
+text-align: center;
+color: #FF7323;
+margin: 10px 0;
+  }
   .item-link {
     font-weight: 600;
     font-size: 20px;
@@ -461,6 +469,10 @@ body {
     text-align: center;
     display: block;
     color: #ff7323;
+    transition: 0.3s;
+    &:hover{
+      opacity: 0.6;
+    }
   }
 }
 .footer {
