--- a/style/media.css
+++ b/style/media.css
@@ -1,4 +1,16 @@
-@media screen and (max-width: 1130px) {
+@media screen and (max-width: 1200px) {
+  .header .header-dj-main {
+    bottom: -27%;
+    -webkit-transform: none;
+            transform: none;
+    max-width: 454px;
+  }
+  .third .third-title img {
+    bottom: 0px;
+  }
+}
+
+@media screen and (max-width: 1020px) {
   .d-desctop {
     display: none;
   }
@@ -64,6 +76,11 @@
     right: 0;
     bottom: 280px;
   }
+  .third .item-work {
+    text-align: left;
+    font-size: 15px;
+    line-height: 17px;
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -100,7 +117,7 @@
             align-items: center;
   }
   .third .third-item {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -109,6 +126,7 @@
   }
   .third .third-item .item-ava {
     margin-right: 10px;
+    margin-bottom: 0;
   }
   .third .third-item .item-name,
   .third .third-item .item-link {
@@ -194,6 +212,25 @@
   .footer .form-wrapper,
   .footer .social-wrapper {
     max-width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer .social-list {
+    width: 80%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer .social-list .social-item-link {
+    margin: 0;
   }
 }
 
