--- a/style/media.scss
+++ b/style/media.scss
@@ -1,4 +1,14 @@
-@media screen and (max-width: 1130px) {
+@media screen and (max-width: 1200px) {
+  .header .header-dj-main {
+    bottom: -27%;
+    transform: none;
+    max-width: 454px;
+  }
+  .third .third-title img {
+    bottom: 0px;
+  }
+}
+@media screen and (max-width: 1020px) {
   .d-desctop {
     display: none;
   }
@@ -60,12 +70,17 @@
       max-width: 45%;
     }
   }
-  .second{
-    .orangestar{
+  .second {
+    .orangestar {
       position: absolute;
       right: 0;
       bottom: 280px;
     }
+  }
+  .third .item-work {
+    text-align: left;
+    font-size: 15px;
+    line-height: 17px;
   }
 }
 @media screen and (max-width: 900px) {
@@ -92,11 +107,12 @@
       align-items: center;
     }
     .third-item {
-      margin-bottom: 20px;
+      margin-bottom: 40px;
       flex-direction: row;
       max-width: 100%;
       .item-ava {
         margin-right: 10px;
+        margin-bottom: 0;
       }
       .item-name,
       .item-link {
@@ -173,6 +189,16 @@
   .footer .form-wrapper,
   .footer .social-wrapper {
     max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer .social-list {
+    width: 80%;
+    justify-content: space-between;
+    .social-item-link {
+      margin: 0;
+    }
   }
 }
 
